# brainviz

./: .gitignore  CLAUDE.md  README.md  TODO.md  dev.sh  package-lock.json  package.json  shell.nix  test.sh
.claude/skills/dev/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/typecheck/: SKILL.md
.claude/skills/wavelet-convert/: SKILL.md
.claude/skills/wavelet-summary/: SKILL.md
.cursor/skills/api-reference/: SKILL.md
.cursor/skills/brain-connectivity-domain/: SKILL.md
.cursor/skills/code-patterns/: SKILL.md
.cursor/skills/dev-workflow/: SKILL.md
.cursor/skills/wavelet/: SKILL.md
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  pyproject.toml
backend/app/: abide_processing.py  cav_processing.py  main.py  models.py  processing.py  rsn_constants.py  wavelet_processing.py
backend/app/analytics/: community.py
backend/app/pipelines/: base.py  csv_pipeline.py
backend/scripts/: convert_wavelet_to_subject_files.py  explore_wavelet.py  generate_overview_asset.py  verify_overview_asset.py
backend/tests/: conftest.py  test_abide_endpoints.py  test_abide_processing.py  test_graph_endpoints.py  test_health.py  utils.py
data/: sample_edges.csv
docs/: deployment.md  wavelet-coherence-plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: overview_data.json
frontend/src/: App.tsx  styles.css  webcodecs.d.ts
frontend/src/lib/: utils.test.ts
frontend/src/overview/: MatrixHeatmap.tsx  MiniGraph.tsx  (+4 more)
nginx/: Dockerfile  nginx.conf
scripts/: generate_data.py
(+24 files in other folders)
