[project]
name = "brainviz-backend"
version = "0.1.0"
description = "BrainViz Graph Backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.1",
    "pandas==2.2.2",
    "networkx==3.3",
    "python-multipart==0.0.9",
    "numpy==2.1.0",
    "scipy==1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

